new feature integration external service (themoviedb.org) via HTTP
